# python-project-49

./: .gitignore  Makefile  README.md  brain-even-demo.cast  brain-games-demo.cast  pyproject.toml
.github/workflows/: build.yml
brain_games/: engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/tests/: test_brain_games.py
